--- a/.gitignore
+++ b/.gitignore
@@ -61,3 +61,5 @@ crashlytics-build.properties
 Spelunker/Library/
 Spelunker/Temp/
 Spelunker/Logs/
+Spelunker/obj/Debug/.NETFramework,Version=v4.7.1.AssemblyAttributes.cs
+Spelunker/obj/Debug/
